--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         .text-gradient {
             background: linear-gradient(135deg, #f97316 0%, #dc2626 100%);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
@@ -118,6 +119,304 @@
 
         .animate-pulse-slow {
             animation: pulse-slow 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+        }
+
+        /* --- BAUBLE SWITCH STYLES --- */
+        .bauble_box {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .bauble_box .bauble_label {
+            background: #cbd5e1;
+            /* Slate 300 for Off */
+            background-position: 62px 5px;
+            background-repeat: no-repeat;
+            background-size: auto 5px;
+            border: 0;
+            border-radius: 50px;
+            box-shadow: inset 0 10px 20px rgba(0, 0, 0, .1), 0 -1px 0px rgba(0, 0, 0, .1), inset 0 -1px 0px #fff;
+            cursor: pointer;
+            display: inline-block;
+            font-size: 0;
+            height: 32px;
+            /* Slightly smaller */
+            position: relative;
+            -webkit-transition: all 500ms ease;
+            transition: all 500ms ease;
+            width: 70px;
+            /* Slightly smaller */
+        }
+
+        .bauble_box .bauble_label:before {
+            background-color: rgba(255, 255, 255, .4);
+            background-position: 0 0;
+            background-repeat: repeat;
+            background-size: 30% auto;
+            border-radius: 50%;
+            box-shadow: inset 0 -5px 15px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .2);
+            content: '';
+            display: block;
+            height: 24px;
+            left: 4px;
+            position: absolute;
+            top: 4px;
+            -webkit-transition: all 500ms ease;
+            transition: all 500ms ease;
+            width: 24px;
+            z-index: 2;
+        }
+
+        .bauble_box input.bauble_input {
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* Checked - Orange for On */
+        .bauble_box input.bauble_input:checked+.bauble_label {
+            background-color: #f97316;
+        }
+
+        .bauble_box input.bauble_input:checked+.bauble_label:before {
+            background-position: 150% 0;
+            box-shadow: inset 0 -5px 15px rgba(255, 255, 255, .2), 0 5px 10px rgba(0, 0, 0, .2);
+            left: calc(100% - 28px);
+        }
+
+        /* --- LOADER STYLES --- */
+        .pl {
+            width: 5em;
+            height: 5em;
+        }
+
+        .pl circle {
+            transform-box: fill-box;
+            transform-origin: 50% 50%;
+        }
+
+        .pl__ring1 {
+            animation: ring1 4s 0s ease-in-out infinite;
+        }
+
+        .pl__ring2 {
+            animation: ring2 4s 0.04s ease-in-out infinite;
+        }
+
+        .pl__ring3 {
+            animation: ring3 4s 0.08s ease-in-out infinite;
+        }
+
+        .pl__ring4 {
+            animation: ring4 4s 0.12s ease-in-out infinite;
+        }
+
+        .pl__ring5 {
+            animation: ring5 4s 0.16s ease-in-out infinite;
+        }
+
+        .pl__ring6 {
+            animation: ring6 4s 0.2s ease-in-out infinite;
+        }
+
+        @keyframes ring1 {
+            from {
+                stroke-dashoffset: -376.237129776;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -94.247778;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -376.237129776;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -94.247778;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -376.237129776;
+                transform: rotate(4.75turn);
+            }
+        }
+
+        @keyframes ring2 {
+            from {
+                stroke-dashoffset: -329.207488554;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -82.46680575;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -329.207488554;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -82.46680575;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -329.207488554;
+                transform: rotate(4.75turn);
+            }
+        }
+
+        @keyframes ring3 {
+            from {
+                stroke-dashoffset: -288.4484661616;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -72.2566298;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -288.4484661616;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -72.2566298;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -288.4484661616;
+                transform: rotate(4.75turn);
+            }
+        }
+
+        @keyframes ring4 {
+            from {
+                stroke-dashoffset: -253.9600625988;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -63.61725015;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -253.9600625988;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -63.61725015;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -253.9600625988;
+                transform: rotate(4.75turn);
+            }
+        }
+
+        @keyframes ring5 {
+            from {
+                stroke-dashoffset: -225.7422778656;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -56.5486668;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -225.7422778656;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -56.5486668;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -225.7422778656;
+                transform: rotate(4.75turn);
+            }
+        }
+
+        @keyframes ring6 {
+            from {
+                stroke-dashoffset: -203.795111962;
+                transform: rotate(-0.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            23% {
+                stroke-dashoffset: -51.05087975;
+                transform: rotate(1turn);
+                animation-timing-function: ease-out;
+            }
+
+            46%,
+            50% {
+                stroke-dashoffset: -203.795111962;
+                transform: rotate(2.25turn);
+                animation-timing-function: ease-in;
+            }
+
+            73% {
+                stroke-dashoffset: -51.05087975;
+                transform: rotate(3.5turn);
+                animation-timing-function: ease-out;
+            }
+
+            96%,
+            to {
+                stroke-dashoffset: -203.795111962;
+                transform: rotate(4.75turn);
+            }
         }
     </style>
 </head>
